--- a/src/main/resources/templates/displaystudio.xhtml
+++ b/src/main/resources/templates/displaystudio.xhtml
@@ -52,6 +52,9 @@
             </form>
             <span th:text ="${studio.shortName}"></span>
             <span th:text ="${studio.longName}"></span>
+            <span th:text ="${transactionSummary.currentPeriod}"></span>
+            <span th:text ="${transactionSummary.previousPeriod}"></span>
+            <span th:text ="${transactionSummary.total}"></span>
         </div>
     </div>
  </div>
