--- a/src/main/resources/templates/displayoffers.xhtml
+++ b/src/main/resources/templates/displayoffers.xhtml
@@ -38,33 +38,42 @@
     </div>
 </nav>
 <div class="container-fluid page-content">
-
-    <div class="alert alert-success mx-auto my-1" role="alert" th:if="${successmessage}">
-        <span th:text="${successmessage}"></span>
-    </div>
-    <div class="alert alert-danger mx-auto my-1" role="alert" th:if="${errormessage}">
-        <span th:text="${errormessage}"></span>
-    </div>
-
     <div class="card mx-auto my-xl-5" style="width: 28rem;">
-        <div class="card-body">
-            <form action="#" th:action="@{/displaydemo}" th:object="${demo}" method="post">
-                <div class="form-group">
-                    <label for="shortname">Short Name:</label>
-                    <input type="text" class="form-control" id="shortname" aria-describedby="shortNameHelp" th:field="${demo.shortName}" th:value="${demo.shortName}" required="required"/>
-                    <small id="shortNameHelp" class="form-text text-muted">Enter Demogroup ShortName</small>
-                    <div class="invalid-feedback">Short Name Cannot be Empty</div>
-                </div>
-                <button type="submit" class="btn btn-primary">Submit</button>
-                <button type="submit" th:onclick="|window.location.href='/'|" class="btn btn-outline-secondary">Cancel</button>
-            </form>
-        </div>
-        <div class="card-body">
-            <form action="#" th:action="@{/displaydemo}" th:object="${demo}" method="get">
-                <span th:text ="${demo.shortName} ?: ''"></span>
-                <span th:text ="${demo.longName} ?: ''"></span>
-                <span th:text ="${demo.numberOfAccounts} ?: ''"></span>
-            </form>
+        <div class="card-body" >
+<!--            <form action="#" th:action="@{/displayevents}" th:object="${event}" method="post">-->
+<!--                <div class="form-group">-->
+<!--                    <label for="shortname">Short Name:</label>-->
+<!--                    <input type="text" class="form-control" id="shortname" aria-describedby="shortNameHelp" th:field="${studio.shortName}" th:value="${studio.shortName}" required="required"/>-->
+<!--                    <small id="shortNameHelp" class="form-text text-muted">Enter Event ShortName</small>-->
+<!--                    <div class="invalid-feedback">Short Name Cannot be Empty</div>-->
+<!--                </div>-->
+<!--                <button type="submit" class="btn btn-primary">Submit</button>-->
+<!--                <button type="submit" th:onclick="|window.location.href='./'|" class="btn btn-outline-secondary">Cancel</button>-->
+<!--            </form>-->
+<!--            <span th:text ="${studio.shortName}"></span>-->
+<!--            <span th:text ="${studio.longName}"></span>-->
+            <table border="1">
+                <tr>
+                    <th>Streaming Service</th>
+                    <th>Event Type</th>
+                    <th>Name</th>
+                    <th>Year</th>
+                    <th>Duration</th>
+                    <th>Studio Short Name</th>
+                    <th>Event Licensing Fee</th>
+                    <th>Event PPV Cost</th>
+                </tr>
+                <tr th:each="transaction :${transactions}">
+                    <td th:text="${transaction.buyer}"> Streaming Service </td>
+                    <td th:text="${transaction.eventType}"> Type </td>
+                    <td th:text="${transaction.eventName}"> Name </td>
+                    <td th:text="${transaction.eventYear}"> Year </td>
+                    <td th:text="${transaction.eventDuration}"> Duration </td>
+                    <td th:text="${transaction.vendor}"> Studio Short Name </td>
+                    <td th:text="${transaction.transactionCost}"> Event Licensing Fee </td>
+                    <td th:text="${transaction.ppvCost==0} ? '':${transaction.ppvCost}"> Event PPV Cost </td>
+                </tr>
+            </table>
         </div>
     </div>
  </div>
