--- a/src/main/resources/templates/updatedemo.xhtml
+++ b/src/main/resources/templates/updatedemo.xhtml
@@ -48,19 +48,25 @@
 
     <div class="card mx-auto my-xl-5" style="width: 28rem;">
         <div class="card-body">
-            <form action="#" th:action="@{/displaydemo}" th:object="${demo}" method="post">
+            <form action="#" th:action="@{/updatedemo}" th:object="${demo}" method="post">
                 <div class="form-group">
                     <label for="shortname">Short Name:</label>
                     <input type="text" class="form-control" id="shortname" aria-describedby="shortNameHelp" th:field="${demo.shortName}" th:value="${demo.shortName}" required="required"/>
                     <small id="shortNameHelp" class="form-text text-muted">Enter Demogroup ShortName</small>
                     <div class="invalid-feedback">Short Name Cannot be Empty</div>
                 </div>
+                <div class="form-group">
+                    <label for="numberofaccounts">Number of Accounts:</label>
+                    <input type="text" class="form-control" id="numberofaccounts" aria-describedby="numberofaccountsHelp" th:field="${demo.numberOfAccounts}" th:value="${demo.numberOfAccounts}" required="required"/>
+                    <small id="shortNameHelp" class="form-text text-muted">Enter new number of accounts</small>
+                    <div class="invalid-feedback">New Number of Accounts Cannot be Empty</div>
+                </div>
                 <button type="submit" class="btn btn-primary">Submit</button>
                 <button type="submit" th:onclick="|window.location.href='/'|" class="btn btn-outline-secondary">Cancel</button>
             </form>
         </div>
         <div class="card-body">
-            <form action="#" th:action="@{/displaydemo}" th:object="${demo}" method="get">
+            <form action="#" th:action="@{/updatedemo}" th:object="${demo}" method="get">
                 <span th:text ="${demo.shortName} ?: ''"></span>
                 <span th:text ="${demo.longName} ?: ''"></span>
                 <span th:text ="${demo.numberOfAccounts} ?: ''"></span>
