Revert "merge in from "before_refactor""
This reverts commit f925f7a115fe209798b1fa902622d066330aff38.

--- a/src/main/resources/templates/createstudio.xhtml
+++ b/src/main/resources/templates/createstudio.xhtml
@@ -2,13 +2,13 @@
 <html xmlns="http://www.w3.org/1999/xhtml" xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8"></meta>
-    <link rel="icon" href="../../../../../../../Downloads/cs6310-project-A6-82-updated_ui_and_additional_methods/src/main/resources/static/favicon/favicon.ico"/>
+    <link rel="icon" href="../static/favicon/favicon.ico"/>
     <title>Streaming Wards</title>
     <!-- Bootstrap core CSS -->
-    <link href="../../../../../../../Downloads/cs6310-project-A6-82-updated_ui_and_additional_methods/src/main/resources/static/css/bootstrap.css" rel="stylesheet" th:href="@{/css/bootstrap.css}"/>
-    <link href="../../../../../../../Downloads/cs6310-project-A6-82-updated_ui_and_additional_methods/src/main/resources/static/css/streamingwars.css" rel="stylesheet" th:href="@{/css/streamingwars.css}"/>
+    <link href="../static/css/bootstrap.css" rel="stylesheet" th:href="@{/css/bootstrap.css}"/>
+    <link href="../static/css/streamingwars.css" rel="stylesheet" th:href="@{/css/streamingwars.css}"/>
     <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
-    <link href="../../../../../../../Downloads/cs6310-project-A6-82-updated_ui_and_additional_methods/src/main/resources/static/js/bootstrap.bundle.js" rel="script" th:href="@{/js/bootstrap.bundle.js}"/>
+    <link href="../static/js/bootstrap.bundle.js" rel="script" th:href="@{/js/bootstrap.bundle.js}"/>
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.11.2/css/all.css"  crossorigin="anonymous"/>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-datepicker/1.9.0/css/bootstrap-datepicker.min.css" integrity="sha512-mSYUmp1HYZDFaVKK//63EcZq4iFWFjxSL+Z3T/aCt4IO9Cejm03q3NKKYN6pFQzY0SBOr8h+eCIAZHPXcpZaNw==" crossorigin="anonymous" />
     <script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-datepicker/1.9.0/js/bootstrap-datepicker.min.js" integrity="sha512-T/tUfKSV1bihCnd+MxKD0Hm1uBBroVYBOYSk1knyvQ9VyZJpc/ALb4P0r6ubwVPSGB2GvjeoMAJJImBG12TiaQ==" crossorigin="anonymous"></script>
@@ -56,7 +56,7 @@
                 <div class="form-group">
                     <label for="datepicker">Creation Date:</label>
                     <div class="input-group">
-                        <input type="text" id="datepicker" class="form-control" aria-describedby="datepicker" readonly="readonly" th:field="${studio.currentMonthYear}" th:value="${studio.currentMonthYear}" required="required"/>
+                       <input type="text" id="datepicker" class="form-control" aria-describedby="datepicker" readonly="readonly" required="required"/>
                         <label class="input-group-btn" for="datepicker">
                             <span class="btn btn-default">
                             <span class="fa fa-calendar open-datetimepicker"></span>
