--- a/src/main/resources/templates/createevent.xhtml
+++ b/src/main/resources/templates/createevent.xhtml
@@ -90,7 +90,7 @@
                 <div class="form-group">
                     <label for="datepicker">Creation Date:</label>
                     <div class="input-group">
-                        <input type="text" id="datepicker" class="form-control" aria-describedby="datepicker" readonly="readonly" th:field="${event.currentMonthYear}" th:value="${event.currentMonthYear}" required="required"/>
+                       <input type="text" id="datepicker" class="form-control" aria-describedby="datepicker" readonly="readonly" required="required"/>
                         <label class="input-group-btn" for="datepicker">
                             <span class="btn btn-default">
                             <span class="fa fa-calendar open-datetimepicker"></span>
