--- a/src/main/resources/templates/displayoffers.xhtml
+++ b/src/main/resources/templates/displayoffers.xhtml
@@ -39,35 +39,41 @@
 </nav>
 <div class="container-fluid page-content">
     <div class="card mx-auto my-xl-5" style="width: 28rem;">
-        <div class="card-body">
-            <form action="#" th:action="@{/createstudio}" th:object="${studio}" method="post">
-                <div class="form-group">
-                    <label for="shortname">Short Name:</label>
-                    <input type="text" class="form-control" id="shortname" aria-describedby="shortNameHelp" th:field="${studio.shortName}" th:value="${studio.shortName}" required="required"/>
-                    <small id="shortNameHelp" class="form-text text-muted">Enter Studio ShortName</small>
-                    <div class="invalid-feedback">Short Name Cannot be Empty</div>
-                </div>
-                <div class="form-group">
-                    <label for="shortname">Long Name:</label>
-                    <input type="text" class="form-control" id="longname" aria-describedby="longNameHelp" th:field="${studio.longName}" th:value="${studio.longName}" required="required"/>
-                    <small id="longNameHelp" class="form-text text-muted">Enter Studio Long Name</small>
-                    <div class="invalid-feedback">Long Name Cannot be Empty</div>
-                </div>
-                <div class="form-group">
-                    <label for="datepicker">Creation Date:</label>
-                    <div class="input-group">
-                        <input type="text" id="datepicker" class="form-control" aria-describedby="datepicker" readonly="readonly" th:field="${studio.currentMonthYear}" th:value="${studio.currentMonthYear}" required="required"/>
-                        <label class="input-group-btn" for="datepicker">
-                            <span class="btn btn-default">
-                            <span class="fa fa-calendar open-datetimepicker"></span>
-                             </span>
-                        </label>
-                    </div>
-                    <small id="creationDateHelp" class="form-text text-muted">Defaulted to Current Month</small>
-                </div>
-                <button type="submit" class="btn btn-primary">Submit</button>
-                <button type="submit" th:onclick="|window.location.href='/'|" class="btn btn-outline-secondary">Cancel</button>
-            </form>
+        <div class="card-body" >
+<!--            <form action="#" th:action="@{/displayevents}" th:object="${event}" method="post">-->
+<!--                <div class="form-group">-->
+<!--                    <label for="shortname">Short Name:</label>-->
+<!--                    <input type="text" class="form-control" id="shortname" aria-describedby="shortNameHelp" th:field="${studio.shortName}" th:value="${studio.shortName}" required="required"/>-->
+<!--                    <small id="shortNameHelp" class="form-text text-muted">Enter Event ShortName</small>-->
+<!--                    <div class="invalid-feedback">Short Name Cannot be Empty</div>-->
+<!--                </div>-->
+<!--                <button type="submit" class="btn btn-primary">Submit</button>-->
+<!--                <button type="submit" th:onclick="|window.location.href='./'|" class="btn btn-outline-secondary">Cancel</button>-->
+<!--            </form>-->
+<!--            <span th:text ="${studio.shortName}"></span>-->
+<!--            <span th:text ="${studio.longName}"></span>-->
+            <table border="1">
+                <tr>
+                    <th>Streaming Service</th>
+                    <th>Event Type</th>
+                    <th>Name</th>
+                    <th>Year</th>
+                    <th>Duration</th>
+                    <th>Studio Short Name</th>
+                    <th>Event Licensing Fee</th>
+                    <th>Event PPV Cost</th>
+                </tr>
+                <tr th:each="transaction :${transactions}">
+                    <td th:text="${transaction.buyer}"> Streaming Service </td>
+                    <td th:text="${transaction.eventType}"> Type </td>
+                    <td th:text="${transaction.eventName}"> Name </td>
+                    <td th:text="${transaction.eventYear}"> Year </td>
+                    <td th:text="${transaction.eventDuration}"> Duration </td>
+                    <td th:text="${transaction.vendor}"> Studio Short Name </td>
+                    <td th:text="${transaction.transactionCost}"> Event Licensing Fee </td>
+                    <td th:text="${transaction.ppvCost==0} ? '':${transaction.ppvCost}"> Event PPV Cost </td>
+                </tr>
+            </table>
         </div>
     </div>
  </div>
