--- a/src/main/resources/templates/displaystream.xhtml
+++ b/src/main/resources/templates/displaystream.xhtml
@@ -39,35 +39,20 @@
 </nav>
 <div class="container-fluid page-content">
     <div class="card mx-auto my-xl-5" style="width: 28rem;">
-        <div class="card-body">
-            <form action="#" th:action="@{/createstudio}" th:object="${studio}" method="post">
+        <div class="card-body" >
+            <form action="#" th:action="@{/displaystream}" th:object="${stream}" method="post">
                 <div class="form-group">
                     <label for="shortname">Short Name:</label>
-                    <input type="text" class="form-control" id="shortname" aria-describedby="shortNameHelp" th:field="${studio.shortName}" th:value="${studio.shortName}" required="required"/>
-                    <small id="shortNameHelp" class="form-text text-muted">Enter Studio ShortName</small>
+                    <input type="text" class="form-control" id="shortname" aria-describedby="shortNameHelp" th:field="${stream.shortName}" th:value="${stream.shortName}" required="required"/>
+                    <small id="shortNameHelp" class="form-text text-muted">Enter Stream ShortName</small>
                     <div class="invalid-feedback">Short Name Cannot be Empty</div>
-                </div>
-                <div class="form-group">
-                    <label for="shortname">Long Name:</label>
-                    <input type="text" class="form-control" id="longname" aria-describedby="longNameHelp" th:field="${studio.longName}" th:value="${studio.longName}" required="required"/>
-                    <small id="longNameHelp" class="form-text text-muted">Enter Studio Long Name</small>
-                    <div class="invalid-feedback">Long Name Cannot be Empty</div>
-                </div>
-                <div class="form-group">
-                    <label for="datepicker">Creation Date:</label>
-                    <div class="input-group">
-                        <input type="text" id="datepicker" class="form-control" aria-describedby="datepicker" readonly="readonly" th:field="${studio.currentMonthYear}" th:value="${studio.currentMonthYear}" required="required"/>
-                        <label class="input-group-btn" for="datepicker">
-                            <span class="btn btn-default">
-                            <span class="fa fa-calendar open-datetimepicker"></span>
-                             </span>
-                        </label>
-                    </div>
-                    <small id="creationDateHelp" class="form-text text-muted">Defaulted to Current Month</small>
                 </div>
                 <button type="submit" class="btn btn-primary">Submit</button>
                 <button type="submit" th:onclick="|window.location.href='/'|" class="btn btn-outline-secondary">Cancel</button>
             </form>
+            <span th:text ="${stream.shortName}"></span>
+            <span th:text ="${stream.longName}"></span>
+            <span th:text ="${stream.subscriptionPrice}"></span>
         </div>
     </div>
  </div>
