--- a/src/main/resources/templates/offerppv.xhtml
+++ b/src/main/resources/templates/offerppv.xhtml
@@ -38,25 +38,45 @@
     </div>
 </nav>
 <div class="container-fluid page-content">
+
+    <div class="alert alert-success mx-auto my-1" role="alert" th:if="${successmessage}">
+        <span th:text="${successmessage}"></span>
+    </div>
+    <div class="alert alert-danger mx-auto my-1" role="alert" th:if="${errormessage}">
+        <span th:text="${errormessage}"></span>
+    </div>
+
     <div class="card mx-auto my-xl-5" style="width: 28rem;">
         <div class="card-body">
-            <form action="#" th:action="@{/createstudio}" th:object="${studio}" method="post">
+            <form action="#" th:action="@{/offerppv}" th:object="${transaction}" method="post">
                 <div class="form-group">
-                    <label for="shortname">Short Name:</label>
-                    <input type="text" class="form-control" id="shortname" aria-describedby="shortNameHelp" th:field="${studio.shortName}" th:value="${studio.shortName}" required="required"/>
-                    <small id="shortNameHelp" class="form-text text-muted">Enter Studio ShortName</small>
+                    <label for="stream">Streaming Service:</label>
+                    <input type="text" class="form-control" id="stream" aria-describedby="streamHelp" th:field="${transaction.buyer}" th:value="${transaction.buyer}" required="required"/>
+                    <small id="shortNameHelp" class="form-text text-muted">Enter Streaming Service Short Name</small>
                     <div class="invalid-feedback">Short Name Cannot be Empty</div>
                 </div>
                 <div class="form-group">
-                    <label for="shortname">Long Name:</label>
-                    <input type="text" class="form-control" id="longname" aria-describedby="longNameHelp" th:field="${studio.longName}" th:value="${studio.longName}" required="required"/>
-                    <small id="longNameHelp" class="form-text text-muted">Enter Studio Long Name</small>
-                    <div class="invalid-feedback">Long Name Cannot be Empty</div>
+                    <label for="eventname">PPV Name:</label>
+                    <input type="text" class="form-control" id="eventname" aria-describedby="eventnameHelp" th:field="${transaction.eventName}" th:value="${transaction.eventName}" required="required"/>
+                    <small id="eventnameHelp" class="form-text text-muted">Enter Event Name</small>
+                    <div class="invalid-feedback">PPV Name Cannot be Empty</div>
+                </div>
+                <div class="form-group">
+                    <label for="eventyear">PPV Year:</label>
+                    <input type="text" class="form-control" id="eventyear" aria-describedby="eventyearHelp" th:field="${transaction.eventYear}" th:value="${transaction.eventYear}" required="required"/>
+                    <small id="eventyearHelp" class="form-text text-muted">Enter Event Year</small>
+                    <div class="invalid-feedback">PPV Year Cannot be Empty</div>
+                </div>
+                <div class="form-group">
+                    <label for="ppvcost">PPV Cost:</label>
+                    <input type="text" class="form-control" id="ppvcost" aria-describedby="ppvcostHelp" th:field="${transaction.ppvCost}" th:value="${transaction.ppvCost}" required="required"/>
+                    <small id="ppvcostHelp" class="form-text text-muted">Enter PPV Cost</small>
+                    <div class="invalid-feedback">PPV Cost Cannot be Empty</div>
                 </div>
                 <div class="form-group">
                     <label for="datepicker">Creation Date:</label>
                     <div class="input-group">
-                        <input type="text" id="datepicker" class="form-control" aria-describedby="datepicker" readonly="readonly" th:field="${studio.currentMonthYear}" th:value="${studio.currentMonthYear}" required="required"/>
+                        <input type="text" id="datepicker" class="form-control" aria-describedby="datepicker" readonly="readonly" th:field="${transaction.currentMonthYear}" th:value="${transaction.currentMonthYear}" required="required"/>
                         <label class="input-group-btn" for="datepicker">
                             <span class="btn btn-default">
                             <span class="fa fa-calendar open-datetimepicker"></span>
@@ -67,6 +87,13 @@
                 </div>
                 <button type="submit" class="btn btn-primary">Submit</button>
                 <button type="submit" th:onclick="|window.location.href='/'|" class="btn btn-outline-secondary">Cancel</button>
+            </form>
+        </div>
+        <div class="card-body">
+            <form action="#" th:action="@{/offermovie}" th:object="${transaction}" method="get">
+                <span th:text ="${transaction.buyer} ?: ''"></span>
+                <span th:text ="${transaction.eventName} ?: ''"></span>
+                <span th:text ="${transaction.eventYear} ?: ''"></span>
             </form>
         </div>
     </div>
