--- a/src/main/resources/templates/updatedemo.xhtml
+++ b/src/main/resources/templates/updatedemo.xhtml
@@ -38,35 +38,38 @@
     </div>
 </nav>
 <div class="container-fluid page-content">
+
+    <div class="alert alert-success mx-auto my-1" role="alert" th:if="${successmessage}">
+        <span th:text="${successmessage}"></span>
+    </div>
+    <div class="alert alert-danger mx-auto my-1" role="alert" th:if="${errormessage}">
+        <span th:text="${errormessage}"></span>
+    </div>
+
     <div class="card mx-auto my-xl-5" style="width: 28rem;">
         <div class="card-body">
-            <form action="#" th:action="@{/createstudio}" th:object="${studio}" method="post">
+            <form action="#" th:action="@{/updatedemo}" th:object="${demo}" method="post">
                 <div class="form-group">
                     <label for="shortname">Short Name:</label>
-                    <input type="text" class="form-control" id="shortname" aria-describedby="shortNameHelp" th:field="${studio.shortName}" th:value="${studio.shortName}" required="required"/>
-                    <small id="shortNameHelp" class="form-text text-muted">Enter Studio ShortName</small>
+                    <input type="text" class="form-control" id="shortname" aria-describedby="shortNameHelp" th:field="${demo.shortName}" th:value="${demo.shortName}" required="required"/>
+                    <small id="shortNameHelp" class="form-text text-muted">Enter Demogroup ShortName</small>
                     <div class="invalid-feedback">Short Name Cannot be Empty</div>
                 </div>
                 <div class="form-group">
-                    <label for="shortname">Long Name:</label>
-                    <input type="text" class="form-control" id="longname" aria-describedby="longNameHelp" th:field="${studio.longName}" th:value="${studio.longName}" required="required"/>
-                    <small id="longNameHelp" class="form-text text-muted">Enter Studio Long Name</small>
-                    <div class="invalid-feedback">Long Name Cannot be Empty</div>
-                </div>
-                <div class="form-group">
-                    <label for="datepicker">Creation Date:</label>
-                    <div class="input-group">
-                        <input type="text" id="datepicker" class="form-control" aria-describedby="datepicker" readonly="readonly" th:field="${studio.currentMonthYear}" th:value="${studio.currentMonthYear}" required="required"/>
-                        <label class="input-group-btn" for="datepicker">
-                            <span class="btn btn-default">
-                            <span class="fa fa-calendar open-datetimepicker"></span>
-                             </span>
-                        </label>
-                    </div>
-                    <small id="creationDateHelp" class="form-text text-muted">Defaulted to Current Month</small>
+                    <label for="numberofaccounts">Number of Accounts:</label>
+                    <input type="text" class="form-control" id="numberofaccounts" aria-describedby="numberofaccountsHelp" th:field="${demo.numberOfAccounts}" th:value="${demo.numberOfAccounts}" required="required"/>
+                    <small id="numberofaccountsHelp" class="form-text text-muted">Enter new number of accounts</small>
+                    <div class="invalid-feedback">New Number of Accounts Cannot be Empty</div>
                 </div>
                 <button type="submit" class="btn btn-primary">Submit</button>
                 <button type="submit" th:onclick="|window.location.href='/'|" class="btn btn-outline-secondary">Cancel</button>
+            </form>
+        </div>
+        <div class="card-body">
+            <form action="#" th:action="@{/updatedemo}" th:object="${demo}" method="get">
+                <span th:text ="${demo.shortName} ?: ''"></span>
+                <span th:text ="${demo.longName} ?: ''"></span>
+                <span th:text ="${demo.numberOfAccounts} ?: ''"></span>
             </form>
         </div>
     </div>
