--- a/src/main/resources/templates/createevent.xhtml
+++ b/src/main/resources/templates/createevent.xhtml
@@ -32,8 +32,7 @@
     <div class="container-fluid">
         <a class="navbar-brand" href="/"><i class="fab fa-jedi-order fa-2x"></i> <span style="padding-left: 8px;font-size: larger">StreamingWars</span></a>
         <ul class="nav navbar-nav navbar-right">
-            <li class="white"><a class="white" href="#"><span class="glyphicon glyphicon-user white"></span> Sign Up</a></li>
-            <li  style="padding-left: 15px;"><a class="white" href="#"><span class="glyphicon glyphicon-log-in white"></span> Login</a></li>
+            <li class="white"><a class="white" href="/"><span class="glyphicon glyphicon-user white"></span> Log Out</a></li>
         </ul>
     </div>
 </nav>
