--- a/src/main/resources/templates/displaydemo.xhtml
+++ b/src/main/resources/templates/displaydemo.xhtml
@@ -7,12 +7,13 @@
     <!-- Bootstrap core CSS -->
     <link href="../static/css/bootstrap.css" rel="stylesheet" th:href="@{/css/bootstrap.css}"/>
     <link href="../static/css/streamingwars.css" rel="stylesheet" th:href="@{/css/streamingwars.css}"/>
-    <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
+    <script src="https://code.jquery.com/jquery-3.5.1.min.js" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
     <link href="../static/js/bootstrap.bundle.js" rel="script" th:href="@{/js/bootstrap.bundle.js}"/>
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.11.2/css/all.css"  crossorigin="anonymous"/>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-datepicker/1.9.0/css/bootstrap-datepicker.min.css" integrity="sha512-mSYUmp1HYZDFaVKK//63EcZq4iFWFjxSL+Z3T/aCt4IO9Cejm03q3NKKYN6pFQzY0SBOr8h+eCIAZHPXcpZaNw==" crossorigin="anonymous" />
     <script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-datepicker/1.9.0/js/bootstrap-datepicker.min.js" integrity="sha512-T/tUfKSV1bihCnd+MxKD0Hm1uBBroVYBOYSk1knyvQ9VyZJpc/ALb4P0r6ubwVPSGB2GvjeoMAJJImBG12TiaQ==" crossorigin="anonymous"></script>
-    <script>
+    <script type="text/javascript">
         $( document ).ready(function() {
             $("#datepicker").datepicker({
                 format: "mm-yyyy",
@@ -23,55 +24,256 @@
             });
             $( "#datepicker" ).datepicker( "setDate", new Date());
         });
+
+        $( document ).ready(function() {
+            $("#startDatePicker").datepicker({
+                format: "mm-yyyy",
+                viewMode: "months",
+                minViewMode: "months",
+                setDate: new Date(),
+                autoclose: true
+            });
+           // $( "#startDatePicker" ).datepicker( "setDate", new Date());
+        });
+
+        $( document ).ready(function() {
+            $("#endDatePicker").datepicker({
+                format: "mm-yyyy",
+                viewMode: "months",
+                minViewMode: "months",
+                setDate: new Date(),
+                autoclose: true
+            });
+            var now = new Date();
+           // $( "#endDatePicker" ).datepicker( "setDate", new Date(now.getFullYear(),now.getMonth() + 1, 1));
+        });
+
+        $(document).on('click', '#editButton', function(){
+            console.log("ara")
+            var $btn = $(this);
+            var rowId = $btn.attr('data-id');
+            var shortName = $btn.attr('data-sName')
+            var longName = $btn.attr('data-lName')
+            var description =  $btn.attr('data-description')
+            var noOfAccounts = $btn.attr('data-numberOfAccounts')
+            var $modal = $('#exampleModal')
+            $modal.find('#idvalue').val(rowId)
+            $modal.find('#shortname').val(shortName)
+            $modal.find('#longname').val(longName)
+            $modal.find('#description').val(description)
+            $modal.find('#numberOfAccounts').val(noOfAccounts)
+            $modal.modal();
+        });
+
+        $(document).on('click', '#saveChanges', function(){
+            var unindexed_array = $("#updateForm").serializeArray();
+            var indexed_array = {};
+            $.map(unindexed_array, function(n, i){
+                indexed_array[n['name']] = n['value'];
+            });
+            var jsonString = JSON.stringify(indexed_array);
+            console.log(jsonString)
+            var url =  "http://localhost:8080/api/updateDemoGraphicGroup";
+            var $modal = $('#exampleModal')
+            $.ajax({
+                type: "POST",
+                url: url,
+                contentType: "application/json",
+                data: jsonString,
+                beforeSend: function() { },
+                complete: function() {
+                    console.log("Success")
+                },
+                success: function(data) {
+                    console.log( "Returned Success Response -->" +data)
+                    $modal.modal('hide')
+                    var newLocation = window.location.href.toString().replace("#",'')
+                    if(newLocation.indexOf("?")!=-1) {
+                        removeString = newLocation.substring(newLocation.indexOf("?"), newLocation.length);
+                        newLocation = newLocation.replace(removeString, '');
+                    }
+                    var endDate = $("#endDatePicker").val()
+                    var startDate = $("#startDatePicker").val()
+                    console.log(newLocation.indexOf("Status=SUCCESS"));
+                    window.location.href = newLocation + "?Status=SUCCESS"+"&startDate="+startDate+"&endDate="+endDate;
+                    // else
+                    // {
+                    //     console.log(newLocation.indexOf("Status=SUCCESS"));
+                    //     //replaceString = newLocation.substring(newLocation.indexOf("Status=SUCCESS"),newLocation.length);
+                    //     /*Replace the parameters to attach new ones*/
+                    //     //newLocation= newLocation.replace(replaceString,'');
+                    //     window.location.href = newLocation+"?Status=SUCCESS"+"&startDate="+startDate+"&endDate="+endDate;
+                    // }
+                },
+                error: function(data) {
+                    console.log( "Returned Error Response -->" +data)
+                    $modal.modal('hide')
+                    var newLocation = window.location.href.toString().replace("#",'')
+                    if(newLocation.indexOf("?")!=-1) {
+                        removeString = newLocation.substring(newLocation.indexOf("?"), newLocation.length);
+                        newLocation = newLocation.replace(removeString, '');
+                    }
+                    console.log("Modified New Location -->"+newLocation)
+                    window.location.href = newLocation+ "?Status=ERROR"+"&startDate="+startDate+"&endDate="+endDate;
+                    // else
+                    // {
+                    //     console.log(newLocation.indexOf("Status=SUCCESS"));
+                    //     replaceString = newLocation.substring(newLocation.indexOf("Status=SUCCESS"),newLocation.length);
+                    //     window.location.href = newLocation;
+                    // }
+                },
+                dataType: 'json'
+            });
+
+        });
     </script>
 </head>
 <body class="d-flex flex-column">
+<!-- Button trigger modal -->
 
 <!-- Static navbar -->
 <nav class="navbar navbar-expand-lg navbar-dark bg-primary">
     <div class="container-fluid">
-        <a class="navbar-brand" href="/"><i class="fab fa-jedi-order fa-2x"></i> <span style="padding-left: 8px;font-size: larger">StreamingWars</span></a>
+        <a class="navbar-brand" href="/index"><i class="fab fa-jedi-order fa-2x"></i> <span style="padding-left: 8px;font-size: larger">StreamingWars</span></a>
         <ul class="nav navbar-nav navbar-right">
-            <li class="white"><a class="white" href="#"><span class="glyphicon glyphicon-user white"></span> Sign Up</a></li>
-            <li  style="padding-left: 15px;"><a class="white" href="#"><span class="glyphicon glyphicon-log-in white"></span> Login</a></li>
+            <li class="white"><a class="white" href="/"><span class="glyphicon glyphicon-user white"></span> Log Out</a></li>
         </ul>
     </div>
 </nav>
 <div class="container-fluid page-content">
-
+    <!-- THese are for ThymeLeaf Updates dont change it -->
     <div class="alert alert-success mx-auto my-1" role="alert" th:if="${successmessage}">
-        <span th:text="${successmessage}"></span>
+        <span id="successmessage" th:text="${successmessage}"></span>
     </div>
     <div class="alert alert-danger mx-auto my-1" role="alert" th:if="${errormessage}">
-        <span th:text="${errormessage}"></span>
+        <span id="errormessage" th:text="${errormessage}"></span>
     </div>
 
-    <div class="card mx-auto my-xl-5" style="width: 28rem;">
+    <div class="card mx-auto my-xl-5" style="width: 28rem; margin-bottom: 0rem !important;">
+        <div class="card-header"><span style="font-weight: bold;">Display Demo (Select the Dates to View the Groups)</span></div>
         <div class="card-body">
-            <form action="#" th:action="@{/displaydemo}" th:object="${demo}" method="post">
+            <form action="#" th:action="@{/displaydemo}" th:object="${editObject}" method="post">
                 <div class="form-group">
-                    <label for="shortname">Short Name:</label>
-                    <input type="text" class="form-control" id="shortname" aria-describedby="shortNameHelp" th:field="${demo.shortName}" th:value="${demo.shortName}" required="required"/>
-                    <small id="shortNameHelp" class="form-text text-muted">Enter Demogroup ShortName</small>
-                    <div class="invalid-feedback">Short Name Cannot be Empty</div>
+                    <div class="row">
+                        <div class="col">
+                            <label for="startDatePicker">Start Date:</label>
+                            <input type="text" class="form-control" placeholder="startDate" id="startDatePicker" th:field="${editObject.startDate}" th:value="${editObject.startDate}" name="startDate"/>
+                        </div>
+                        <div class="col">
+                            <label for="endDatePicker">End Date:</label>
+                            <input type="text" class="form-control" placeholder="endDate" id="endDatePicker" th:field="${editObject.endDate}" th:value="${editObject.endDate}" name="endDate"/>
+                        </div>
+                    </div>
                 </div>
                 <button type="submit" class="btn btn-primary">Submit</button>
-                <button type="submit" th:onclick="|window.location.href='/'|" class="btn btn-outline-secondary">Cancel</button>
-            </form>
-        </div>
-        <div class="card-body">
-            <form action="#" th:action="@{/displaydemo}" th:object="${demo}" method="get">
-                <span th:text ="${demo.shortName} ?: ''"></span>
-                <span th:text ="${demo.longName} ?: ''"></span>
-                <span th:text ="${demo.numberOfAccounts} ?: ''"></span>
             </form>
         </div>
     </div>
- </div>
+
+
+    <div id="displayTable" class="card mx-auto my-xl-5 d-flex" style="width: 100rem;">
+        <div class="card-header d-flex" style="font-weight: bold">Demographic Groups</div>
+        <div class="table-responsive " style="margin: 1px">
+            <table class="table table-sm table-bordered table-striped">
+                <thead>
+                <tr>
+                    <th  scope="col">Id</th>
+                    <th scope="col">Short Name</th>
+                    <th  scope="col">Long Name</th>
+                    <th  scope="col">Description</th>
+                    <th  scope="col">No: Acccounts</th>
+                    <th  scope="col">Archived</th>
+                    <th  scope="col">createdAt</th>
+                    <th  scope="col"></th>
+                </tr>
+                </thead>
+                <tbody>
+                <tr th:if="${nodata != null}" class="max-col-span">
+                    <td colspan="100%">
+                        <div class="alert alert-light d-flex justify-content-center" role="alert" >
+                            No Rows to Display for Selected Start and End Date
+                        </div>
+                    </td>
+                </tr>
+                <tr th:if="${nodata == null}"  th:each="demo: ${demos}">
+                    <td  th:text="${demo.id}" />
+                    <td  th:text="${demo.shortName}" />
+                    <td th:text="${demo.longName}" />
+                    <td  th:text="${demo.description}" />
+                    <td  th:text="${demo.numberOfAccounts}" />
+                    <td  th:text="${demo.archived}" />
+                    <td th:text="${demo.createdAt}" />
+                    <td><a href="#" id="editButton" class="editButtonClass" th:attr="data-id=${demo.id},data-sName=${demo.shortName},data-lName=${demo.longName},data-description=${demo.description},data-numberOfAccounts=${demo.numberOfAccounts}"><i class="pen far fa-edit"></i></a></td>
+                </tr>
+                </tbody>
+            </table>
+        </div>
+    </div>
+</div>
 <footer id="sticky-footer" class="py-2 bg-secondary text-white-50">
     <div class="container text-center">
         <small>Copyright CS6310 Group A82 &copy; Streaming Wars. All rights reserved.</small>
     </div>
 </footer>
+
+
+<!-- Modal -->
+<div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+    <div class="modal-dialog">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h5 class="modal-title" id="exampleModalLabel">Edit Demographic Group</h5>
+                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+
+                </button>
+            </div>
+            <div class="modal-body">
+                <form id="updateForm" action="#" th:action="@{/displaydemo}" th:object="${editObject}" method="post">
+                    <div class="form-group">
+                        <input type="hidden" class="form-control" id="idvalue" aria-describedby="idHelp"  name="id" value="" readonly="readonly"/>
+                        <label for="shortname">Short Name:</label>
+                        <input type="text" class="form-control" id="shortname" aria-describedby="shortNameHelp" name="shortName" value="" readonly="readonly"/>
+                        <small id="shortNameHelp" class="form-text text-muted">Enter Demographic ShortName</small>
+                        <div class="invalid-feedback">Short Name Cannot be Empty</div>
+                    </div>
+                    <div class="form-group">
+                        <label for="longname">Long Name:</label>
+                        <input type="text" class="form-control" id="longname" aria-describedby="longNameHelp" name="longName" value="" required="required"/>
+                        <small id="longNameHelp" class="form-text text-muted">Enter Demographic Long Name</small>
+                        <div class="invalid-feedback">Long Name Cannot be Empty</div>
+                    </div>
+                    <div class="form-group">
+                        <label for="description">Description:</label>
+                        <input type="text" class="form-control" id="description" aria-describedby="descriptionHelp" name="description" value="" required="required"/>
+                        <small id="descriptionHelp" class="form-text text-muted">Enter Demographic Description</small>
+                        <div class="invalid-feedback">Description cannot be Empty</div>
+                    </div>
+                    <div class="form-group">
+                        <label for="numberOfAccounts">Number of Accounts:</label>
+                        <input type="text" class="form-control" id="numberOfAccounts" aria-describedby="numberofaccountsHelp" name="numberOfAccounts" value="" required="required"/>
+                        <small id="numberofaccountsHelp" class="form-text text-muted">Enter Demographic Number of Accounts</small>
+                        <div class="invalid-feedback">Number of Accounts cannot be Empty</div>
+                    </div>
+                    <div class="form-group">
+                        <label for="datepicker">Creation Date:</label>
+                        <div class="input-group">
+                            <input type="text" id="datepicker" class="form-control" aria-describedby="datepicker" readonly="readonly"  name="datepicker" value="" required="required" disabled="disabled"/>
+                            <label class="input-group-btn" for="datepicker">
+                            <span class="btn btn-default">
+                            <span class="fa fa-calendar open-datetimepicker"></span>
+                             </span>
+                            </label>
+                        </div>
+                        <small id="creationDateHelp" class="form-text text-muted">Defaulted to Stored Value and is not editable</small>
+                    </div>
+                </form>
+            </div>
+            <div class="modal-footer">
+                <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+                <button type="button" id="saveChanges" class="btn btn-primary">Save changes</button>
+            </div>
+        </div>
+    </div>
+</div>
 </body>
 </html>
